# MiniPP

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  MiniPPConfig.cmake.in  MiniPPGenerateMain.cmake  MiniPPGenerator.cmake
generators/: CMakeLists.txt  IntTool.cpp
include/MiniPP/: CMakeLists.txt  MiniPP.hpp
tests/: ArgsUtility.cpp  Base.cpp  Boolean.cpp  CMakeLists.txt  CallWithArgs.cpp  CatIsMoreThan1Args.cpp  ComputeSwitchWithOrWithoutVaArgs.cpp  ForEach.cpp  IsEqual.cpp  Math.cpp  SwitchWithOrWithoutVaArgs.cpp  TestUtility.hpp  Tuple.cpp  UnrollUtility.cpp
tests/fetchcontent/: CMakeLists.txt  FetchContentTest.cpp
tests/install/: CMakeLists.txt  InstallTest.cpp
